# ProjectX2.0

./: CMakeLists.txt  Dockerfile  README.md  cifuzz.yaml  main.cpp  run.sh
.github/workflows/: fuzzing.yml
src/: CMakeLists.txt  calculator.h
test/: test.cpp  test1.cpp
